# production_rag_with_langchain_-_vector_database

./: .env.example  advance_rag.py  config.py  cost_optimizing.py  document_loaders.py  embeddings_deep.py  langsmith_setup.py  main.py  prod_hybrid_search.py  prod_ready.py  pyproject.toml  rag_pipeline.py  semantic_chunking.py  text_spliters.py  vector_stores.py
config/: config.py
