[project]
name = "production-rag-with-langchain-vector-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-core>=1.4.7",
    "langchain-mistralai>=1.1.5",
    "langgraph>=1.2.5",
    "python-dotenv>=1.2.2",
]
